--- a/Tesis.Android/Tesis.Android.csproj
+++ b/Tesis.Android/Tesis.Android.csproj
@@ -68,10 +68,13 @@
       <Version>3.7.2</Version>
     </PackageReference>
     <PackageReference Include="FirebaseDatabase.net">
-      <Version>4.0.7</Version>
+      <Version>4.2.0</Version>
     </PackageReference>
     <PackageReference Include="FirebaseStorage.net">
       <Version>1.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="FontAwesome">
+      <Version>4.7.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CSharp">
       <Version>4.7.0</Version>
@@ -100,9 +103,6 @@
     <AndroidResource Include="Resources\drawable\icon_user1.png" />
     <AndroidResource Include="Resources\drawable\no_notifications.png" />
     <None Include="Assets\AQyPnj0A5h.lottie" />
-    <Content Include="Resources\1736559235674.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -148,6 +148,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\logo_3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\itq.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
