--- a/Tesis.iOS/Tesis.iOS.csproj
+++ b/Tesis.iOS/Tesis.iOS.csproj
@@ -130,10 +130,13 @@
       <Version>3.7.2</Version>
     </PackageReference>
     <PackageReference Include="FirebaseDatabase.net">
-      <Version>4.0.7</Version>
+      <Version>4.2.0</Version>
     </PackageReference>
     <PackageReference Include="FirebaseStorage.net">
       <Version>1.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="FontAwesome">
+      <Version>4.7.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CSharp">
       <Version>4.7.0</Version>
